--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,20 @@ a {
   text-decoration: none;
 }
 
+.list-link {
+  position: fixed;
+}
 .link {
   color: white;
+  transform: 300px;
+}
+
+.section {
+  width: 100%;
+  height: 100%;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
 }
